--- a/css/main.css
+++ b/css/main.css
@@ -562,7 +562,7 @@ ol {
   flex-direction: column;
   align-items: center;
   border-radius: 8px;
-  background: url("/img/casino/game-auth.jpeg");
+  background: url("/img/casino/game_auth.jpeg");
   background-size: cover;
   background-position: center;
   overflow: hidden;
@@ -747,8 +747,9 @@ ol {
 .banner {
   padding: 20px;
 }
+
 .banner__content {
-  background: url(/img/section_banner/banner_player.png);
+  background: url(/img/section_banner/section-banner_player.png);
   border-radius: 6px;
   object-fit: contain;
   width: 100%;
@@ -948,7 +949,7 @@ ol {
   padding: 20px;
 }
 .get-bonus__content {
-  background: url(/img/get-bonus/get-bonus-background.png);
+  background: url(/img/get-bonus/get-bonus-back.png);
   border-radius: 6px;
   object-fit: contain;
   width: 100%;
@@ -1414,7 +1415,7 @@ ol {
   padding: 20px;
 }
 .customer-support__content {
-  background: url(/img/customer-support/customer-support-back.png);
+  background: url(/img/customer-support/customer-support-background.png);
   object-fit: contain;
   padding: 20px;
   border-radius: 6px;
@@ -1717,10 +1718,11 @@ p.customer-support__info {
 }
 .banner-bonus__content,
 .banner-app__content {
-  background: url(/img/section_banner/banner_player.png);
+  background: url(/img/section_banner/section-banner_player.png);
   border-radius: 6px;
   object-fit: contain;
   width: 100%;
+  height: 384px;
   background-size: cover;
   background-position: center;
 }
